--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,7 @@ body{
 
 .container{
     width: 290px;
+    height: 610px;
     padding: 20px;
     background-color: #fff;
     border-radius: 8px;
@@ -59,8 +60,8 @@ body{
 }
 
 .image img{
-    width: 160px;
-    height: 160px;
+    width: 130px;
+    height: 130px;
 }
 
 .temp,
@@ -74,7 +75,9 @@ body{
 }
 
 .temp{
-    font-weight: 500;
+    margin-top: -35px !important;
+    font-size: 20px !important;
+    font-weight: 900;
 }
 
 .location{
@@ -84,7 +87,6 @@ body{
 }
 
 .country{
-    font-size: 18px;
     color: #888;
     font-weight: 500;
 }
@@ -120,13 +122,13 @@ body{
 }
 
 .icon{
-    height: 50px;
-    width: 50px;
+    height: 30px;
+    width: 30px;
 }
 
 .data-container{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     margin-top: 20px;
 }
 
@@ -143,6 +145,7 @@ body{
     text-align: center;
     font-size: 12px;
     color: #888;
+    margin-top: 60px;
 }
 
 .copyright span{
@@ -153,9 +156,23 @@ body{
 .city-not-found,
 .loading-message,
 .error-message{
-    margin-top: 10px;
+    margin-top: 5px;
     color: #888;
-    font-size: 25px;
+    font-size: 16px;
     font-weight: 400;
     text-align: center;
+}
+
+.date span{
+ width: 50%;
+ border: 1px solid none;   
+ border-radius: 5px;
+ text-align: center;
+ font-weight: 900;
+ color: #333    
+}
+
+.date p{
+    font-weight: 600;
+    color: #333;
 }
