--- a/src/App.css
+++ b/src/App.css
@@ -145,7 +145,8 @@ body{
     text-align: center;
     font-size: 12px;
     color: #888;
-    margin-top: 60px;
+    margin-top: 110px;
+    font-weight: 700;
 }
 
 .copyright span{
